misc [platform]: forgotten URLs and more accurate sorting in `ExcludeRootsCache`
... + cleanup (minor optimization; typos; formatting)

GitOrigin-RevId: af2797317c5c3717f401bed4914ec2cccb30c5aa